--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "unique-reducer",
+  "name": "reduce-unique",
   "author": "Lloyd Brookes <75pound@gmail.com>",
   "version": "1.0.0",
-  "description": "Reduce an array to one or more unique values",
-  "repository": "https://github.com/75lb/unique-reducer.git",
+  "description": "Reduce an array to unique values, optionally into a separate array.",
+  "repository": "https://github.com/75lb/reduce-unique.git",
   "license": "MIT",
-  "main": "./lib/unique-reducer.js",
+  "main": "./lib/reduce-unique.js",
   "keywords": [
     "reduce",
     "array",
