--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "description": "Reduce an array to unique values, optionally into a separate array.",
   "repository": "https://github.com/75lb/reduce-unique.git",
   "license": "MIT",
-  "main": "./lib/reduce-unique.js",
   "keywords": [
     "reduce",
     "array",
     "unique"
   ],
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=6"
   },
   "scripts": {
-    "test": "tape test/*.js",
-    "docs": "jsdoc2md -t jsdoc2md/README.md lib/*.js > README.md; echo"
+    "test": "test-runner test.js",
+    "docs": "jsdoc2md -t README.hbs index.js > README.md; echo"
   },
   "devDependencies": {
-    "jsdoc-to-markdown": "^1.3.3",
-    "tape": "^4.4.0"
+    "jsdoc-to-markdown": "^4.0.1"
+  },
+  "dependencies": {
+    "test-runner": "^0.5.0"
   }
 }
