--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     "docs": "jsdoc2md -t README.hbs index.js > README.md; echo"
   },
   "devDependencies": {
-    "jsdoc-to-markdown": "^4.0.1"
-  },
-  "dependencies": {
+    "jsdoc-to-markdown": "^4.0.1",
     "test-runner": "^0.5.0"
   }
 }
